--- a/.local.manifest.json
+++ b/.local.manifest.json
@@ -173,7 +173,7 @@
           "parentId": 105865,
           "folderPath": "Content Builder/sfmc_vuejs_progressive_survey/frontend/components"
         },
-        "content": "<script runat=\"server\">\n  Platform.Load(\"core\", \"1.1.1\");\n\n  var survey = Platform.Request.GetQueryStringParameter('survey');\n\n  var surveyPath = 'Content Builder\\\\sfmc_vuejs_progressive_survey\\\\configurations\\\\survey' + '\\\\ ' + survey;\n  var surveyConfigurationPath = surveyPath + '\\\\survey_configuration'\n  surveyConfigurationPath = surveyConfigurationPath.replace(/(?<=\\\\)\\ /g, '')\n  var surveyConfiguration = Platform.Function.ContentBlockByName(surveyConfigurationPath)\n\n  var applicationConfigurationPath = 'Content Builder\\\\sfmc_vuejs_progressive_survey\\\\configurations\\\\app_configuration'\n  var applicationConfiguration = Platform.Function.ContentBlockByName(applicationConfigurationPath)\n  var applicationConfigurationJSON = Platform.Function.ParseJSON(applicationConfiguration)\n  var map = applicationConfigurationJSON.map;\n\n  var unauthorizedUser = Platform.Function.ContentBlockByName(\"Content Builder\\\\sfmc_vuejs_progressive_survey\\\\frontend\\\\components\\\\unauthorized_user\")\n  var brandingBar = Platform.Function.ContentBlockByName(\"Content Builder\\\\sfmc_vuejs_progressive_survey\\\\frontend\\\\components\\\\branding_bar\")\n  var surveyFormHorizontal = Platform.Function.ContentBlockByName(\"Content Builder\\\\sfmc_vuejs_progressive_survey\\\\frontend\\\\components\\\\survey_form_horizontal\")\n  var legal = Platform.Function.ContentBlockByName(\"Content Builder\\\\sfmc_vuejs_progressive_survey\\\\frontend\\\\components\\\\legal\")\n  var appJS = Platform.Function.ContentBlockByName(\"Content Builder\\\\sfmc_vuejs_progressive_survey\\\\frontend\\\\app_js\")\n\n</script>\n\n%%=Concat('<sc','rip','t>')=%%\n\n  Vue.use(VueToast, {\n  position: 'top-right',\n  duration: 6000,\n  dismissable: true\n  });\n\n  Vue.use(VueFormulate)\n  Vue.use(VTooltip)\n\n  const applicationConfiguration = <ctrl:var name=applicationConfiguration />\n  const surveyConfigurationJSON = <ctrl:var name=surveyConfiguration />\n  const surveyConfiguration = surveyConfigurationJSON.survey;\n\n  const survey = \"<ctrl:var name=survey />\"\n\n\n  <ctrl:var name=brandingBar />\n  <ctrl:var name=unauthorizedUser />\n  <ctrl:var name=surveyFormHorizontal />\n  <ctrl:var name=legal />\n  <ctrl:var name=appJS />\n\n  %%=Concat('</sc','rip','t>')=%%",
+        "content": "<script runat=\"server\">\n  Platform.Load(\"core\", \"1.1.1\");\n\n  var survey = Platform.Request.GetQueryStringParameter('survey');\n\n  var surveyPath = 'Content Builder\\\\sfmc_vuejs_progressive_survey\\\\configurations\\\\survey' + '\\\\ ' + survey;\n  var surveyConfigurationPath = surveyPath + '\\\\survey_configuration'\n  surveyConfigurationPath = surveyConfigurationPath.replace(/(?<=\\\\)\\ /g, '')\n  var surveyConfiguration = Platform.Function.ContentBlockByName(surveyConfigurationPath)\n\n  var applicationConfiguration = Platform.Function.ContentBlockByID('111557')\n  var applicationConfigurationJSON = Platform.Function.ParseJSON(applicationConfiguration)\n\n  var unauthorizedUser = Platform.Function.ContentBlockByID('111564')\n  var brandingBar = Platform.Function.ContentBlockByID('111562')\n  var surveyFormHorizontal = Platform.Function.ContentBlockByID('123133')\n  var legal = Platform.Function.ContentBlockByID('111563')\n  var appJS = Platform.Function.ContentBlockByID('111560')\n\n</script>\n\n%%=Concat('<sc','rip','t>')=%%\n\n  Vue.use(VueToast, {\n  position: 'top-right',\n  duration: 6000,\n  dismissable: true\n  });\n\n  Vue.use(VueFormulate)\n  Vue.use(VTooltip)\n\n  const applicationConfiguration = <ctrl:var name=applicationConfiguration />\n  const surveyConfigurationJSON = <ctrl:var name=surveyConfiguration />\n  const surveyConfiguration = surveyConfigurationJSON.survey;\n\n  const survey = \"<ctrl:var name=survey />\"\n\n  <ctrl:var name=brandingBar />\n  <ctrl:var name=unauthorizedUser />\n  <ctrl:var name=surveyFormHorizontal />\n  <ctrl:var name=legal />\n  <ctrl:var name=appJS />\n\n  %%=Concat('</sc','rip','t>')=%%",
         "id": 111561,
         "customerKey": "23b5b8da-1615-4f34-a372-c024dc4a1f48"
       },
@@ -280,14 +280,16 @@
         "customerKey": "66121d7b-3361-4c0b-a902-dae7cd83c0f9"
       },
       {
-        "id": 111571,
         "bldrId": "118da206-1fc9-4529-bbc9-03dae9f70795",
         "name": "survey_index",
-        "customerKey": "a0507876-cf3c-4c27-b115-57525ff1c8ca",
+        "views": {
+          "html": {
+            "content": "<!DOCTYPE html>\n<html>\n\n<head>\n\n  <script src=\"https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js\"></script>\n  <script src=\"https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js\"></script>\n\n  <!-- Axios API - https://www.npmjs.com/package/axios -->\n  <script src=\"https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js\"></script>\n\n  <!-- Toast Notifications - https://www.npmjs.com/package/vue-toast-notification -->\n  <script src=\"https://cdn.jsdelivr.net/npm/vue-toast-notification@0.6\"></script>\n  <link href=\"https://cdn.jsdelivr.net/npm/vue-toast-notification@0.6/dist/theme-sugar.css\" rel=\"stylesheet\">\n\n  \n  <script src=\"https://cdn.jsdelivr.net/npm/@braid/vue-formulate@2.5.3/dist/formulate.min.js\"></script>\n  <link rel=\"stylesheet\" href=\"https://cdn.jsdelivr.net/npm/@braid/vue-formulate@2.5.3/dist/snow.css\">\n\n  <link href=\"https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900\" rel=\"stylesheet\">\n  <link href=\"https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css\" rel=\"stylesheet\">\n  <link href=\"https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css\" rel=\"stylesheet\">\n  \n  <script src=\"https://unpkg.com/v-tooltip@^2.0.0\"></script>\n\n  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui\">\n</head>\n\n<body>\n  <div v-cloak id=\"app\">\n    %%=TreatAsContent(ContentBlockById('111559'))=%%\n  </div>\n\n\n  %%=TreatAsContent(ContentBlockById('111561'))=%%\n\n</body>\n\n</html>"
+          }
+        },
         "assetType": {
-          "id": 205,
           "name": "webpage",
-          "displayName": "Web Page"
+          "id": 205
         },
         "category": {
           "id": 35088,
@@ -295,28 +297,8 @@
           "parentId": 0,
           "folderPath": "Content Builder"
         },
-        "meta": {
-          "globalStyles": {
-            "isLocked": false,
-            "body": {
-              "max-width": "1280px"
-            }
-          }
-        },
-        "views": {
-          "html": {
-            "thumbnail": {},
-            "content": "<!DOCTYPE html>\n<html>\n\n<head>\n\n  <script src=\"https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js\"></script>\n  <script src=\"https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js\"></script>\n\n  <!-- Axios API - https://www.npmjs.com/package/axios -->\n  <script src=\"https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js\"></script>\n\n  <!-- Toast Notifications - https://www.npmjs.com/package/vue-toast-notification -->\n  <script src=\"https://cdn.jsdelivr.net/npm/vue-toast-notification@0.6\"></script>\n  <link href=\"https://cdn.jsdelivr.net/npm/vue-toast-notification@0.6/dist/theme-sugar.css\" rel=\"stylesheet\">\n\n  \n  <script src=\"https://cdn.jsdelivr.net/npm/@braid/vue-formulate@2.5.3/dist/formulate.min.js\"></script>\n  <link rel=\"stylesheet\" href=\"https://cdn.jsdelivr.net/npm/@braid/vue-formulate@2.5.3/dist/snow.css\">\n\n  <link href=\"https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900\" rel=\"stylesheet\">\n  <link href=\"https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css\" rel=\"stylesheet\">\n  <link href=\"https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css\" rel=\"stylesheet\">\n  \n  <script src=\"https://unpkg.com/v-tooltip@^2.0.0\"></script>\n\n  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui\">\n</head>\n\n  %%=TreatAsContent(ContentBlockByName('Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\styles\\vue_formulate_styles'))=%%\n\n<body>\n  <div v-cloak id=\"app\">\n    %%=TreatAsContent(ContentBlockByName('Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\app_html'))=%%\n  </div>\n\n\n  %%=TreatAsContent(ContentBlockByName('Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\_component_imports'))=%%\n\n</body>\n\n</html>",
-            "meta": {},
-            "slots": {
-              "col1": {
-                "design": "<p style=\"font-family:arial;color:#ccc;font-size:11px;text-align:center;vertical-align:middle;font-weight:bold;padding:10px;margin:0;border:#ccc dashed 1px;\">Drop blocks or content here</p>",
-                "modelVersion": 2
-              }
-            },
-            "modelVersion": 2
-          }
-        }
+        "id": 111571,
+        "customerKey": "a0507876-cf3c-4c27-b115-57525ff1c8ca"
       },
       {
         "bldrId": "8f35e912-42fb-42c5-9937-8b9dcedd5938",
@@ -351,6 +333,24 @@
         "content": "{\n  \"dataExtensionKey\": \"{{surveyDataExtensionKey}}\",\n  \"survey\": [\n    {\n      \"ref\": \"contact_info\",\n      \"label\": \"Contact Info\",\n      \"subtitle\": \"\",\n      \"copy\": \"Please provide your email address. <br><br> Your email address will be used to limit to one response and will allow you to leave the form and finish later. <br><br> In addition, in the event we have follow up questions regarding your submission, we may wish to contact you. <br /> We will not contact you unless you confirm with the checkbox below.\",\n      \"form\": [\n        {\n          \"type\": \"text\",\n          \"label\": \"EmailAddress*\",\n          \"name\": \"email_address\",\n          \"rules\": {\n            \"required\": (value) => !!value || \"Required\"\n          }\n        },\n        {\n          \"type\": \"radio\",\n          \"label\": \"Can we contact you if we have follow up questions?\",\n          \"name\": \"opt_in\",\n          \"options\": [\n            {\n              \"value\": \"yes\",\n              \"label\": \"Yes\"\n            },\n            {\n              \"value\": \"no\",\n              \"label\": \"No\"\n            }\n          ]\n        }\n      ]\n    },\n    {\n      \"ref\": \"about\",\n      \"label\": \"About You\",\n      \"subtitle\": \"\",\n      \"copy\": \"Tell us a bit about yourself\",\n      \"form\": [\n        {\n          \"type\": \"radio\",\n          \"label\": \"Have you tried BLDR\",\n          \"name\": \"downloaded_bldr\",\n          \"rules\": {\n            \"required\": (value) => !!value || \"Required\"\n          },\n          \"options\": [\n            {\n              \"value\": \"yes\",\n              \"label\": \"Yes\"\n            },\n            {\n              \"value\": \"no\",\n              \"label\": \"No\"\n            }\n          ]\n        },\n        {\n          \"type\": \"select\",\n          \"name\": \"sfmc_role\",\n          \"label\": \"Describe your role within SFMC\",\n          \"options\": [\n            {\n              \"value\": \"app_solutions\",\n              \"text\": \"App/Solutions Developer\"\n            },\n            {\n              \"value\": \"email_dev\",\n              \"text\": \"Email Developer\"\n            },\n            {\n              \"value\": \"marketer\",\n              \"text\": \"General Marketer\"\n            },\n            {\n              \"value\": \"project_manager\",\n              \"text\": \"Project Manager\"\n            },\n            {\n              \"value\": \"admin\",\n              \"text\": \"Admin\"\n            }\n          ]\n        },\n        {\n          \"type\": \"select\",\n          \"name\": \"job_type\",\n          \"label\": \"What of company do you work at\",\n          \"options\": [\n            {\n              \"value\": \"brand_side\",\n              \"text\": \"Brand/Single Organization\"\n            },\n            {\n              \"value\": \"agency\",\n              \"text\": \"Agency/Multiple Organizations\"\n            },\n            {\n              \"value\": \"freelancer\",\n              \"text\": \"Freelancer\"\n            }\n          ]\n        },\n        {\n          \"type\": \"select\",\n          \"name\": \"technical_skill\",\n          \"label\": \"How technical are you\",\n          \"options\": [\n            {\n              \"value\": \"very\",\n              \"text\": \"Very\"\n            },\n            {\n              \"value\": \"somewhat\",\n              \"text\": \"Somewhat\"\n            },\n            {\n              \"value\": \"learning\",\n              \"text\": \"Just Learning\"\n            },\n            {\n              \"value\": \"none\",\n              \"text\": \"Not Technical\"\n            }\n          ]\n        },\n        {\n          \"type\": \"textarea\",\n          \"name\": \"packages_develop\",\n          \"label\": \"What types of packages would you want to contribute to the SFMC open-source community?\"\n        },\n        {\n          \"type\": \"textarea\",\n          \"name\": \"packages_deploy\",\n          \"label\": \"What types of packages would you want to leverage from the SFMC open-source community?\"\n        }\n      ]\n    },\n    {\n      \"ref\": \"wish_list\",\n      \"label\": \"Wish List\",\n      \"subtitle\": \"\",\n      \"copy\": \"What's missing from SFMC... What tools and features would you love to see implemented in BLDR or in general?\",\n      \"form\": [\n        {\n          \"type\": \"textarea\",\n          \"name\": \"wish_list_bldr\",\n          \"label\": \"What's missing in BLDR? What types of features are must haves for you or your team to use BLDR?\"\n        },\n        {\n          \"type\": \"textarea\",\n          \"name\": \"wish_list_sfmc\",\n          \"label\": \"What's missing from SFMC? What types of tools would you love to see developed for SFMC?\"\n        },\n        {\n          \"type\": \"select\",\n          \"label\": \"What type of content would you like to see around BLDR?\",\n          \"name\": \"bldr_future_content\",\n          \"multiple\": true,\n          \"options\": [\n            {\n              \"value\": \"blog_articles\",\n              \"text\": \"Blog Articles\"\n            },\n            {\n              \"value\": \"workflow\",\n              \"text\": \"Example Workflows\"\n            },\n            {\n              \"value\": \"case_studies\",\n              \"text\": \"Case Studies\"\n            },\n            {\n              \"value\": \"cli_dev_docs\",\n              \"text\": \"Developer Documentation (CLI/SDK)\"\n            }\n          ]\n        }\n      ]\n    }\n  ]\n}",
         "id": 146824,
         "customerKey": "153dc8ec-7fd9-41d7-b93f-881fe9b58ce4"
+      },
+      {
+        "bldrId": "2cdbff5c-ba38-4ae9-b00c-37ce5ca86279",
+        "name": "survey_api",
+        "assetType": {
+          "id": 240,
+          "name": "jscoderesource",
+          "displayName": "Javascript Code Resource"
+        },
+        "category": {
+          "id": 35088,
+          "name": "Content Builder",
+          "parentId": 0,
+          "folderPath": "Content Builder"
+        },
+        "content": "%%=TreatAsContent(ContentBlockById(\"111556\"))=%%",
+        "id": 142174,
+        "customerKey": "0bdbb8a3-1d19-4555-9b77-af6f30c30c16"
       }
     ]
   },
